# nonlinear-surface-contactsensing

./: README.md
nonlinear_surface_contactsensing/: CMakeLists.txt  package.xml
nonlinear_surface_contactsensing/config/: config.yaml
nonlinear_surface_contactsensing/include/: ftsensor_read_can.hpp  nonlinear_surface_contactsensing.hpp  stl_loader.hpp
nonlinear_surface_contactsensing/launch/: contactsensing_rviz.launch
nonlinear_surface_contactsensing/meshes/: finger_tip.STL  sinewave_cover_lowscale.STL
nonlinear_surface_contactsensing/rviz/: urdf.rviz
nonlinear_surface_contactsensing/src/: ftsensor_read_can.cpp  main_contactsensing.cpp  main_ftsensor_read.cpp  nonlinear_surface_contactsensing.cpp  stl_loader.cpp
nonlinear_surface_contactsensing/urdf/: sinewave_surface.urdf  sinewave_surface.xacro
