<?xml version="1.0"?>
<package>
  <name>nonlinear_surface_contactsensing</name>
  <version>0.0.1</version>
  <description>ftsensor based package using ROBOTUST-can communication version</description>
  <maintainer email="downj11@korea.ac.kr">down</maintainer>
  <license>BSD</license>
  <author email="downj11@korea.ac.kr">down</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>actionlib</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>actionlib</run_depend>
</package>
